tests/test_enum/bad/quick_pattern_3.catala_en
## Article

```catala
declaration enumeration E:
-- Case1
-- Case2

declaration enumeration F:
-- Case3
-- Case4

declaration scope A:
context x content E
context y content boolean

scope A:
definition x equals Case1
definition y equals x with pattern Case3
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ E
└─⯈ F

Error coming from typechecking the following expression:
┌─⯈ tests/test_enum/bad/quick_pattern_3.catala_en:18.21-18.22:
└──┐
18 │ definition y equals x with pattern Case3
   │                     ‾
   └─ Article

Type E coming from expression:
┌─⯈ tests/test_enum/bad/quick_pattern_3.catala_en:13.19-13.20:
└──┐
13 │ context x content E
   │                   ‾
   └─ Article

Type F coming from expression:
┌─⯈ tests/test_enum/bad/quick_pattern_3.catala_en:18.21-18.41:
└──┐
18 │ definition y equals x with pattern Case3
   │                     ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
   └─ Article
#return code 123#
```
